--- a/client/package.json
+++ b/client/package.json
@@ -5,23 +5,30 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
-    "@mui/x-data-grid": "^7.28.3",
-    "@nivo/bar": "^0.88.0",
-    "@nivo/core": "^0.88.0",
-    "@nivo/pie": "^0.88.0",
-    "@reduxjs/toolkit": "^2.6.1",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@mui/styles": "^6.4.8",
+    "@mui/system": "^7.1.0",
+    "@reduxjs/toolkit": "^2.8.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "^18.2.0",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "i18next": "^25.1.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.4",
+    "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.30.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
